@@ -5,12 +5,14 @@ namespace MyTester;
  * Test suite for class Runner
  *
  * @author Jakub Konečný
+ * @deprecated since version 1.0
  */
 class RunnerTest {
   /**
    * Test for Environment::testResult()
    * 
    * @return void
+   * @deprecated since version 1.0
    */
   function test() {
     Environment::testResult("Test", false);
