@@ -8,6 +8,7 @@ Version 1.0-dev
 - added new assertion notCount
 - all items of array are now evaluated in TestCase::checkSkip()
 - added option to skip test if an extension is not loaded
+- deprecated Runner
 
 Version 0.9.4c
 - fixed assertion same
